# rara-trading

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  cliff.toml  deny.toml  docker-compose.yml  justfile
.github/workflows/: lint.yml  rust.yml
crates/rara-agent/: Cargo.toml
crates/rara-agent/src/: backend.rs  config.rs  executor.rs  lib.rs  llm_impl.rs
crates/rara-domain/: Cargo.toml
crates/rara-domain/src/: contract.rs  event.rs  feedback.rs  lib.rs  research.rs  sentinel.rs  strategy.rs  timeframe.rs  trading.rs
crates/rara-domain/src/trading/: git.rs  mod.rs  operation.rs
crates/rara-event-bus/: Cargo.toml
crates/rara-event-bus/src/: bus.rs  lib.rs  store.rs
crates/rara-feedback/: Cargo.toml
crates/rara-feedback/src/: aggregator.rs  consumer.rs  engine.rs  evaluator.rs  feedback_loop.rs  lib.rs  retrain.rs
crates/rara-infra/: Cargo.toml
crates/rara-infra/src/: lib.rs  llm.rs
crates/rara-market-data/: Cargo.toml
crates/rara-market-data/migrations/: 20260325000001_create_candles.sql  20260325000002_create_ticks.sql
crates/rara-market-data/src/: archiver.rs  cache.rs  file.rs  ingester.rs  lib.rs  record.rs
crates/rara-market-data/src/fetcher/: binance.rs  mod.rs  yahoo.rs
crates/rara-market-data/src/store/: candle.rs  mod.rs  tick.rs
crates/rara-market-data/src/stream/: aggregator.rs  binance_ws.rs  mod.rs  persister.rs  reconnect.rs
crates/rara-research/: Cargo.toml
crates/rara-research/src/: backtest_pool.rs  backtester.rs  barter_backtester.rs  barter_strategy.rs  candle_instrument_data.rs  compiler.rs  feedback_gen.rs  hypothesis_gen.rs  lib.rs  prompt_renderer.rs  research_loop.rs  runtime.rs  strategy_coder.rs  strategy_executor.rs  strategy_manager.rs  strategy_promoter.rs  strategy_registry.rs  strategy_store.rs  trace.rs  wasm_executor.rs  wasm_strategy.rs  wasm_strategy_manager.rs
crates/rara-research/src/prompts/: feedback_gen.toml  hypothesis_gen.toml  strategy_code.toml
crates/rara-sentinel/: Cargo.toml
crates/rara-sentinel/src/: analyzer.rs  engine.rs  source.rs
crates/rara-sentinel/src/sources/: mod.rs  rss.rs  trump_code.rs  webhook.rs
crates/rara-server/: Cargo.toml  build.rs
crates/rara-server/proto/: rara.proto
crates/rara-server/src/: health.rs  lib.rs  service.rs
crates/rara-server/tests/: service_test.rs
crates/rara-strategy-api/: Cargo.toml
crates/rara-strategy-api/src/: lib.rs
crates/rara-trading-engine/: Cargo.toml
crates/rara-trading-engine/src/: account_config.rs  account_manager.rs  binding.rs  broker.rs  broker_registry.rs  engine.rs  guard_pipeline.rs  health.rs  lib.rs  signal_loop.rs  trading_git.rs  uta.rs
crates/rara-trading-engine/src/brokers/: ccxt.rs  mod.rs  paper.rs
crates/rara-trading-engine/src/guards/: drawdown_limit.rs  max_position_size.rs  mod.rs  sentinel_gate.rs  symbol_whitelist.rs
crates/rara-trading-engine/tests/: uta_integration.rs
crates/rara-tui/: Cargo.toml
crates/rara-tui/src/: app.rs  error.rs  event_loop.rs  lib.rs  server_process.rs  theme.rs  ui.rs
crates/rara-tui/src/tabs/: events.rs  mod.rs  overview.rs  research.rs  strategies.rs  trading.rs
crates/rara-tui/tests/: app_test.rs
docs/: architecture.md  getting-started.md
docs/guides/: anti-patterns.md  resource.md  rust-style.md
src/: accounts_config.rs  app_config.rs  daemon.rs  error.rs  lib.rs  logging.rs  main.rs  paths.rs  setup_wizard.rs  validation.rs
src/agent/: executor.rs  mod.rs
src/cli/: mod.rs
src/domain/: contract.rs  event.rs  feedback.rs  mod.rs  research.rs  sentinel.rs  strategy.rs  trading.rs
src/event_bus/: bus.rs  mod.rs  store.rs
src/feedback/: aggregator.rs  engine.rs  evaluator.rs  mod.rs
src/infra/: llm.rs  mod.rs
src/research/: backtester.rs  barter_backtester.rs  hypothesis_gen.rs  market_data.rs  mod.rs  research_loop.rs  strategy_coder.rs  trace.rs
src/sentinel/: analyzer.rs  engine.rs  mod.rs
src/sentinel/sources/: mock.rs  mod.rs  rss.rs  webhook.rs
src/trading/: binding.rs  broker.rs  engine.rs  guard_pipeline.rs  mod.rs
src/trading/brokers/: ccxt.rs  mock.rs  mod.rs  paper.rs
src/trading/guards/: drawdown_limit.rs  max_position_size.rs  mod.rs  sentinel_gate.rs  symbol_whitelist.rs
strategies/: .gitignore
strategies/template/: Cargo.toml
strategies/template/src/: lib.rs
tests/: backtest_performance.rs  cli_test.rs  domain_models.rs  e2e_smoke.rs  end_to_end.rs  event_bus.rs
tests/domain_models/: contract_test.rs  event_test.rs  feedback_test.rs  research_test.rs  sentinel_test.rs  strategy_test.rs  trading_test.rs
