[workspace]
members = [".", "crates/rara-domain", "crates/rara-event-bus", "crates/rara-agent", "crates/rara-infra", "crates/rara-trading-engine", "crates/rara-feedback", "crates/rara-sentinel", "crates/rara-research", "crates/rara-strategy-api"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
bon = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
snafu = "0.9"
wasmtime = "41"
wasmtime-wasi = "41"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sled = "0.34"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
clap = { version = "4", features = ["derive"] }
config = "0.15"
toml = "0.8"
rara-agent = { path = "crates/rara-agent" }
rara-infra = { path = "crates/rara-infra" }
rara-domain = { path = "crates/rara-domain" }
rara-event-bus = { path = "crates/rara-event-bus" }
rara-trading-engine = { path = "crates/rara-trading-engine" }
rara-feedback = { path = "crates/rara-feedback" }
rara-sentinel = { path = "crates/rara-sentinel" }
rara-research = { path = "crates/rara-research" }
rara-strategy-api = { path = "crates/rara-strategy-api" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[package]
name = "rara-trading"
version = "0.1.0"
edition.workspace = true
description = "TODO: describe your CLI"
license.workspace = true
repository = "https://github.com/rararulab/rara-trading"

[dependencies]
clap.workspace = true
config.workspace = true
dirs = "6"
rara-agent.workspace = true
rara-domain.workspace = true
rara-event-bus.workspace = true
rara-feedback.workspace = true
rara-infra.workspace = true
rara-research.workspace = true
rara-sentinel.workspace = true
rara-trading-engine.workspace = true
reqwest.workspace = true
rust_decimal.workspace = true
rust_decimal_macros = "1"
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd = "2"
jiff.workspace = true
predicates = "3"
rust_decimal.workspace = true
rust_decimal_macros = "1"
tempfile.workspace = true

[lints]
workspace = true
