[workspace]
members = [".", "crates/rara-domain", "crates/rara-event-bus", "crates/rara-agent", "crates/rara-infra", "crates/rara-trading-engine", "crates/rara-feedback", "crates/rara-sentinel", "crates/rara-research", "crates/rara-strategy-api", "crates/rara-market-data", "crates/rara-server", "crates/rara-tui"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"

[workspace.dependencies]
bon = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-str"] }
snafu = "0.9"
strum = { version = "0.27", features = ["derive"] }
wasmtime = "41"
wasmtime-wasi = "41"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "sync", "signal"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sled = "0.34"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "migrate"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
config = "0.15"
toml = "0.8"
rara-agent = { path = "crates/rara-agent" }
rara-infra = { path = "crates/rara-infra" }
rara-domain = { path = "crates/rara-domain" }
rara-event-bus = { path = "crates/rara-event-bus" }
rara-trading-engine = { path = "crates/rara-trading-engine" }
rara-feedback = { path = "crates/rara-feedback" }
rara-sentinel = { path = "crates/rara-sentinel" }
rara-research = { path = "crates/rara-research" }
rara-strategy-api = { path = "crates/rara-strategy-api" }
rara-market-data = { path = "crates/rara-market-data" }
rara-server = { path = "crates/rara-server" }
rara-tui = { path = "crates/rara-tui" }
tonic = "0.13"
prost = "0.13"
prost-types = "0.13"
ratatui = "0.29"
crossterm = "0.28"
dialoguer = "0.11"
indicatif = "0.18"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
redundant_pub_crate = "allow"

[package]
name = "rara-trading"
version = "0.1.0"
edition.workspace = true
description = "TODO: describe your CLI"
license.workspace = true
repository = "https://github.com/rararulab/rara-trading"

[dependencies]
chrono.workspace = true
clap.workspace = true
config.workspace = true
futures-util.workspace = true
dialoguer.workspace = true
dirs = "6"
rara-agent.workspace = true
rara-domain.workspace = true
rara-event-bus.workspace = true
rara-feedback.workspace = true
rara-infra.workspace = true
rara-market-data.workspace = true
rara-research.workspace = true
rara-sentinel.workspace = true
rara-server.workspace = true
rara-trading-engine.workspace = true
rara-tui.workspace = true
reqwest.workspace = true
tonic.workspace = true
rust_decimal.workspace = true
rust_decimal_macros = "1"
serde.workspace = true
serde_json.workspace = true
indicatif.workspace = true
snafu.workspace = true
sqlx.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
which = "7"

[dev-dependencies]
assert_cmd = "2"
async-trait.workspace = true
jiff.workspace = true
predicates = "3"
rara-domain.workspace = true
rara-event-bus.workspace = true
rara-market-data.workspace = true
rara-research.workspace = true
rara-trading-engine.workspace = true
rust_decimal.workspace = true
rust_decimal_macros = "1"
serde_json.workspace = true
sled.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
uuid.workspace = true

[lints]
workspace = true
