[package]
name = "rara-agent"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "LLM backend abstraction and CLI executor"

[dependencies]
async-trait.workspace = true
bon.workspace = true
rara-infra.workspace = true
serde.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
tempfile.workspace = true
nix = { version = "0.30", features = ["signal"] }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
