[package]
name = "rara-domain"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
bon.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
strum.workspace = true
sha2 = "0.10"

[lints]
workspace = true
