[package]
name = "rara-event-bus"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Persistent event bus with sled storage"

[dependencies]
rara-domain.workspace = true
sled.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
