[package]
name = "rara-market-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Dual-layer market data storage: hot binary (.rara) + cold Parquet"

[dependencies]
bon.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
zerocopy = { version = "0.8", features = ["derive"] }
memmap2 = "0.9"
arrow = { version = "55", default-features = false, features = ["ipc"] }
parquet = { version = "55", default-features = false, features = ["arrow", "snap"] }
moka = { version = "0.12", features = ["sync"] }
reqwest.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
