[package]
name = "rara-market-data"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "TimescaleDB-backed market data storage and fetching"

[dependencies]
bon.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
tokio.workspace = true
chrono.workspace = true
async-trait.workspace = true
reqwest.workspace = true
sqlx.workspace = true

[lints]
workspace = true
