[package]
name = "rara-research"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Research loop: hypothesis generation, backtesting, strategy iteration"

[dependencies]
rara-domain.workspace = true
rara-event-bus.workspace = true
rara-infra.workspace = true
rara-market-data.workspace = true
async-trait.workspace = true
bon.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
sled.workspace = true
uuid.workspace = true
jiff.workspace = true
rust_decimal.workspace = true
toml.workspace = true
tracing.workspace = true
tokio.workspace = true
num_cpus = "1"
barter = "0.12"
barter-data = "0.11"
barter-execution = "0.7"
barter-instrument = "0.3"
chrono.workspace = true
smol_str = "0.3"
wasmtime.workspace = true
wasmtime-wasi.workspace = true
strategy-api.workspace = true
reqwest.workspace = true

[dev-dependencies]
tempfile.workspace = true
rara-agent.workspace = true
rust_decimal_macros = "1"
tokio.workspace = true

[lints]
workspace = true
