[package]
name = "rara-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream = "0.1"
tracing.workspace = true
snafu.workspace = true
serde.workspace = true
serde_json.workspace = true
async-stream = "0.3"
which = "7"
rara-domain.workspace = true
rara-event-bus.workspace = true

[build-dependencies]
tonic-build = "0.13"
protox = "0.9"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[lints]
workspace = true
