[package]
name = "rara-strategy-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Strategy trait and types for WASM-compiled trading strategies"

# Minimal dependencies — must compile to wasm32-wasip1
[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
