[package]
name = "rara-trading-engine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Trading engine: brokers, guards, order execution"

[dependencies]
rara-domain.workspace = true
rara-event-bus.workspace = true
async-trait.workspace = true
bon.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio.workspace = true
tracing.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
jiff.workspace = true
ccxt-rust = { version = "0.1", features = ["rest"] }
smol_str = "0.3"

[dev-dependencies]
tempfile.workspace = true
rust_decimal_macros = "1"

[lints]
workspace = true
