[package]
name = "rara-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
tracing.workspace = true
snafu.workspace = true
rara-server.workspace = true

[lints]
workspace = true
